testsuite/poke.pkl/attr-diag-4.pk
/* { dg-do compile } */

var a =
  [1,2,3]'eoffset (
    "foo" + "bar" /* { dg-error "invalid argument.*\n.*expected integral" } */
    );
